--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap" rel="stylesheet">
 
-<audio id="buttonSound" src="buttonSound.wav" preload="auto"></audio>
+<!-- <audio id="buttonSound" src="buttonSound.wav" preload="auto"></audio> -->
 
 </head>
 <body>
