--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 
 </head>
 <body>
+
+    <audio id="buttonSound">
+        <source src="buttonSound.wav" type="audio/wav" />
+        <source src="buttonSound.mp3" type="audio/mpeg" />
+          Your browser does not support the audio element.
+      </audio>
     <!-- <canvas id="myCanvas"></canvas> -->
     <div class="container">
         <!-- Первая зона -->
