add footer with links

--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
         <div class="zone reset-zone">
             <button class="reset-button" id="resetButton">Reset</button>
         </div> -->
+        <div class="github-footer">
+            projects:
+            <a href="https://terminatorec.github.io/homepage/" target="_blank">
+              <img src="img/github.svg" alt="GitHub" class="github-icon">
+            </a>
+            github:
+            <a href="https://github.com/terminatorec" target="_blank">
+              <img src="img/github.svg" alt="GitHub" class="github-icon">
+            </a>
+          </div>
     </div>
     <script src="script.js"></script>
     
